--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             git push
   foo:
     docker:
-      - image: circleci/alpine:latest
+      - image: circleci/golang:1.14
     steps:
       - run:
           name: Dummy step
